# mathLibrary

./: README.md
mathLibrary/: CMakeLists.txt
mathLibrary/include/: allMathFunctions.h  basicOperations.h  linearAlgebra.h  trigonometricFunctions.h
mathLibrary/src/: basicOperations.c  linearAlgebra.c  trigonometricFunctions.c
mathLibrary/tests/: testLibrary.c
